# py-swoosh

./: .gitignore  README.md  pyproject.toml
.github/workflows/: continuous-integration.yml  python-app.yml
src/stanford_swoosh/: swoosh.py
tests/: r_swoosh_test.py
