[tool.poetry]
name = "stanford-swoosh"
version = "0.1.0"
description = "Implementation of the swoosh family of algorithms in Python"
authors = ["Andrei Olar <andrei.olar@ubbcluj.ro>"]
readme = "README.md"
packages = [{include = "stanford_swoosh", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
